[tool.poetry]
name = "todo_list"
version = "0.1.0"
description = ""
authors = ["Ahmed Bodiwala <ahmed_bodi@msn.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
python-dotenv = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
